[package]
name = "rchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = "4.2.7"
env_logger = "0.10.0"
log = "0.4.17"
num = "0.4.0"
p256 = { version = "0.13.2", features = ["serde"] }
rand_core = "0.6.4"
ripemd = "0.1.3"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
sha2 = "0.10.6"
sled = "0.34.7"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
data-encoding = "2.3.3"
tempfile = "3.5.0"
predicates = "3.0.3"
